@@ -1,36 +1,31 @@
 package fr.dawan.AppliCFABack.services;
 
-import static org.junit.jupiter.api.Assertions.*;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Stream;
-
-import org.junit.jupiter.api.Test;
+import fr.dawan.AppliCFABack.dto.DossierProjetDto;
+import fr.dawan.AppliCFABack.entities.DossierProjet;
+import fr.dawan.AppliCFABack.mapper.DtoMapper;
+import fr.dawan.AppliCFABack.mapper.DtoMapperImpl;
+import fr.dawan.AppliCFABack.repositories.DossierProjetRepository;
+import org.junit.Test;
 import org.junit.jupiter.api.TestInstance;
-import org.junit.jupiter.api.TestInstance.Lifecycle;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.ArgumentMatchers;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.ActiveProfiles;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import static org.junit.jupiter.api.Assertions.*;
 
-import fr.dawan.AppliCFABack.dto.DossierProjetDto;
-import fr.dawan.AppliCFABack.entities.DossierProjet;
-import fr.dawan.AppliCFABack.mapper.DtoMapper;
-import fr.dawan.AppliCFABack.mapper.DtoMapperImpl;
-import fr.dawan.AppliCFABack.repositories.DossierProjetRepository;
+
+
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @SpringBootTest
-@ActiveProfiles("dev")
-class DossierProjetServiceTest {
-
+@AutoConfigureMockMvc
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+class DossierProjetControllerTests {
 
     @Autowired
     DossierProjetService service;
@@ -39,25 +34,24 @@ class DossierProjetServiceTest {
     private DossierProjetRepository repository;
 
     @MockBean
-    private DtoMapper mapper;
+    private DtoMapper mapper = new DtoMapperImpl();
 
-    @Test
+
+    /*@Test
     void givenNothing_whenAll_thenReturnDtos() {
-        DossierProjet dossierProjet1 = new DossierProjet();
-        DossierProjet dossierProjet2 = new DossierProjet();
-        List<DossierProjet> entities = Arrays.asList(dossierProjet1, dossierProjet2);
-
+        DossierProjet projet1 = new DossierProjet();
+        DossierProjet projet2 = new DossierProjet();
+        List<DossierProjet> entities = Collections.unmodifiableList(projet1);
         DossierProjetDto projetDto1 = new DossierProjetDto();
         DossierProjetDto projetDto2 = new DossierProjetDto();
-        List<DossierProjetDto> dtos = Arrays.asList(projetDto1, projetDto2);
-
+        List<DossierProjetDto> dtos = List.of(projetDto1,projetDto2);
         Mockito.when(repository.findAll()).thenReturn(entities);
-        Mockito.when(mapper.dossierProjetToDossierProjetDto(dossierProjet1)).thenReturn(projetDto1);
-        Mockito.when(mapper.dossierProjetToDossierProjetDto(dossierProjet2)).thenReturn(projetDto2);
-
+        Mockito.when(mapper.dossierProjetToDossierProjetDto(projet1)).thenReturn(projetDto1);
+        Mockito.when(mapper.dossierProjetToDossierProjetDto(projet2)).thenReturn(projetDto2);
         List<DossierProjetDto> result = service.getAll();
         assertTrue(result.containsAll(dtos));
-    }
+    }*/
+
 
 
 
@@ -69,7 +63,7 @@ class DossierProjetServiceTest {
         DossierProjet entity = new DossierProjet();
 
         Mockito.when(mapper.dossierProjetDtoToDossierProjet(dto)).thenReturn(entity);
-        Mockito.when(repository.saveAndFlush(entity)).thenAnswer(invocationOnMock -> {
+        Mockito.when(repository.save(entity)).thenAnswer(invocationOnMock -> {
             entity.setId(1L);
             entities.add(entity);
             return entity;
@@ -87,41 +81,4 @@ class DossierProjetServiceTest {
                 () -> assertTrue(entities.contains(entity))
         );
     }
-    
-
-    
-	private static Stream<Arguments> byIdProvider() {
-		DossierProjet dossierProjet1 = new DossierProjet();
-        dossierProjet1.setId(1L);
-        DossierProjet dossierProjet2 = new DossierProjet();
-        dossierProjet2.setId(2L);
-        List<DossierProjet> entities = Arrays.asList(dossierProjet1, dossierProjet2);
-
-        return Stream.of(
-                Arguments.of(entities, 1L, 1L),
-                Arguments.of(entities, 2L, 2L)
-        );
-    }
-
-    @ParameterizedTest
-    @MethodSource("byIdProvider")
-    void givenProvider_whenById_thenReturnFoundOrNew(List<DossierProjet> entities, long id, long expectedId) {
-        Mockito.when(repository.findById(id))
-                .thenReturn(entities.stream().filter(projet -> projet.getId() == id).findFirst());
-
-        Mockito.when(mapper.dossierProjetToDossierProjetDto(ArgumentMatchers.any(DossierProjet.class))).thenAnswer(invocationOnMock -> {
-        	DossierProjet argument = invocationOnMock.getArgument(0);
-        	return new DossierProjetDto(argument.getId(), argument.getNom(), null, null,
-                    null,null, null, null,
-                    null, null, argument.getVersion());
-        });
-
-        DossierProjetDto result = service.getById(id);
-
-        assertEquals(expectedId,result.getId());
-    }
-
-
 }
-
-
